# weltempfaenger

./: Linearization.ipynb  README.md  inputd.service
hardware/schematics/: README.md
hardware/schematics/boards/default/: board.lp
hardware/schematics/circuit/: circuit.lp
hardware/schematics/project/: metadata.lp
hardware/schematics/schematics/main/: schematic.lp
inputd/: Cargo.toml  build-rpi.sh
inputd/src/: main.rs  tests.rs
rpi-image/: .gitignore  br  build.sh  buildroot-defconfig
rpi-image/weltempfaenger/: config.txt  post-image.sh
rpi-image/weltempfaenger/rootfs-overlay/etc/: wpa_supplicant.conf
rpi-image/weltempfaenger/rootfs-overlay/etc/init.d/: S60alsa  S99inputd
rpi-image/weltempfaenger/rootfs-overlay/etc/network/: interfaces
rpi-image/weltempfaenger/rootfs-overlay/etc/profile.d/: keymap.sh  motd.sh
rpi-image/weltempfaenger/rootfs-overlay/etc/systemd/system/: inputd.service
rpi-image/weltempfaenger/rootfs-overlay/etc/systemd/system-preset/: 50-wpa_supplicant.preset  90-inputd.preset
rpi-image/weltempfaenger/rootfs-overlay/etc/wpa_supplicant/: wpa_supplicant-nl80211-wlan0.conf
rpi-image/weltempfaenger/rootfs-overlay/root/: .profile
