[package]
name = "inputd"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"
description = "Read input signals from the raspi radio and control volume and playback."

[dependencies]
ads1x1x = "0.2"
clap = "3.0.0-beta.1"
embedded-hal = "0.2"
linux-embedded-hal = "0.3"
nb = "0.1"
